--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -5,20 +5,26 @@
 <h3>Please login to access your task list.</h3>
 
 
-<form action="/" method="post">
-	<div class="input-group">
-		<label for="name">Username:</label>
-		<input type="text" id="username" name="username" value="{{ request.form.username }}">
-	</div>
-	<div class="input-group">
-		<label for="password">Password:</label>
-		<input type="password" id="password" name="password" value="{{ request.form.password }}">
-	</div>
-	<div>
-		<button type="submit">Login</button>
-	</div>
+<form method="post" action="/">
+  {{ form.csrf_token }}
+  <div>
+    {{ form.name.label }}
+    {{ form.name }}
+  </div>
+  <div>
+    {{ form.password.label }}
+    {{ form.password }}
+  </div>
+  <div>
+    <input type="submit" value="Submit">
+  </div>
 </form>
 
-<p><em>Use 'admin' for the username and password.</em></p>
+<br>
+
+<div class="">
+  <em>Need an account? </em><a href="/register">Signup!!</a>
+</div>
+
 
 {% endblock %}
