--- a/project/templates/tasks.html
+++ b/project/templates/tasks.html
@@ -6,38 +6,41 @@
 <a href="{{ url_for('logout') }}">Logout</a>
 <div class="add-task">
   <h3>Add a new task:</h3>
-    <table>
-        <tr>
-      <form action="{{ url_for('new_task') }}" method="post" class="inline-form">
-        {{ form.csrf_token }}
-        <td>
-          <div class="input-group">
-            {{ form.name.label }}
-            {{ form.name }}
-          </div>
-        </td>
-        <td>
-          <div class="input-group">
-            {{ form.due_date.label }}
-            {{ form.due_date }}
-          </div>
-        </td>
-        <td>
-          <div class="input-group">
-            {{ form.priority.label }}
-            {{ form.priority }}
-          </div>
-        </td>
-        <td>
-          &nbsp;
-          &nbsp;
-          <div class="input-group">
-            <input class="button" type="submit" value="Submit">
-          </div>
-        </td>
-      </form>
-    </tr>
-  </table>
+  <form action="{{ url_for('new_task') }}" method="post" class="inline-form">
+    {{ form.csrf_token }}
+    <div class="input-group">
+      {{ form.name(placeholder="name") }}
+      {% if form.name.errors %}
+        <div class="error">
+          {% for error in form.name.errors %}
+            {{error}}
+          {% endfor %}
+        </div>
+      {% endif %}
+    </div>
+    <div class="input-group">
+      {{ form.due_date(placeholder="due date") }}
+      {% if form.due_date.errors %}
+        <div class="error">
+          {% for error in form.due_date.errors %}
+            {{error}}
+          {% endfor %}
+        </div>
+      {% endif %}
+    </div>
+    <div class="input-group">
+      {{ form.priority(placeholder="priority") }}
+      {% if form.priority.errors %}
+        <div class="error">
+          {% for error in form.priority.errors %}
+            {{error}}
+          {% endfor %}
+        </div>
+      {% endif %}
+    </div>
+    <div class="input-group">
+      <button class="button" type="submit">Submit</button>
+    </div>
 </div>
 <div class="entries">
   <br>
