--- a/project/templates/login.html
+++ b/project/templates/login.html
@@ -30,7 +30,7 @@
   <button class="btn btn-sm btn-success" type="submit">Sign in</button>
   <br>
   <br>
-  <p><em>Need an account?</em><a href="/register">Signup!!</a></p>
+  <p><em>Need an account?</em> - <a href="/register">Signup!!</a></p>
 </form>
 
 {% endblock %}
